Added page navigation

--- a/C#Simple/AppShell.xaml
+++ b/C#Simple/AppShell.xaml
@@ -7,9 +7,12 @@
     Shell.FlyoutBehavior="Disabled"
     Title="C_Simple">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+  <TabBar>
+        <ShellContent Title="Home" ContentTemplate="{DataTemplate local:HomePage}" />
+        <ShellContent Title="Login" ContentTemplate="{DataTemplate local:LoginPage}" />
+        <ShellContent Title="Inputs" ContentTemplate="{DataTemplate local:InputsPage}" />
+        <ShellContent Title="Contact" ContentTemplate="{DataTemplate local:ContactPage}" />
+        <ShellContent Title="About" ContentTemplate="{DataTemplate local:AboutPage}" />
+    </TabBar>
 
 </Shell>
