--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -1,21 +1,92 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:local="clr-namespace:CSimple.Pages"
        xmlns:m="clr-namespace:CSimple.Models"
        xmlns:v="clr-namespace:CSimple.Views"
-       xmlns:c="clr-namespace:WeatherClient2021"
        xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
        ios:Page.UseSafeArea="True"
        Title="Action"
        Shell.NavBarIsVisible="{OnIdiom True, Desktop=False}"
        x:Class="CSimple.Pages.ActionPage">
 
-       <StackLayout Padding="10">
-              <Label Text="Action" 
-                     FontSize="Title" 
-                     HorizontalOptions="Center" 
-                     VerticalOptions="StartAndExpand"/>
-              <Label Text="This page helps users to take action on their plans." 
-                     FontSize="Body"
-                     VerticalOptions="CenterAndExpand"/>
-       </StackLayout>
+    <StackLayout Padding="10" Spacing="20">
+        <Label Text="Action"
+               FontSize="Title"
+               HorizontalOptions="Center"
+               VerticalOptions="StartAndExpand"/>
+
+        <Label Text="Manage your actions and commands."
+               FontSize="Body"
+               VerticalOptions="CenterAndExpand"/>
+
+        <!-- Array View: Keyboard Keys -->
+        <Frame BorderColor="LightGray" Padding="10" Margin="10">
+            <StackLayout>
+                <Label Text="Keyboard Keys Array" FontSize="Subtitle"/>
+                <CollectionView ItemsSource="{Binding KeyboardKeys}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Orientation="Horizontal" Spacing="10">
+                                <Entry Text="{Binding Key}" Placeholder="Key" WidthRequest="100"/>
+                                <Entry Text="{Binding ActionName}" Placeholder="Action Name" WidthRequest="200"/>
+                                <Button Text="Simulate" 
+                                   Command="{Binding Source={RelativeSource 
+                                          AncestorType={x:Type local:ActionPage}}, 
+                                          Path=BindingContext.SimulateKeyCommand}" 
+                                   CommandParameter="{Binding .}"/>
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+                <Button Text="Add New Key" Command="{Binding AddNewKeyCommand}"/>
+            </StackLayout>
+        </Frame>
+
+        <!-- Array View: Mouse Outputs -->
+        <Frame BorderColor="LightGray" Padding="10" Margin="10">
+            <StackLayout>
+                <Label Text="Mouse Outputs Array" FontSize="Subtitle"/>
+                <CollectionView ItemsSource="{Binding MouseOutputs}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Orientation="Horizontal" Spacing="10">
+                                <Entry Text="{Binding MouseAct}" Placeholder="Mouse Action" WidthRequest="100"/>
+                                <Entry Text="{Binding ActionName}" Placeholder="Action Name" WidthRequest="200"/>
+                                <Button Text="Simulate" 
+                                   Command="{Binding Source={RelativeSource 
+                                          AncestorType={x:Type local:ActionPage}}, 
+                                          Path=BindingContext.SimulateMouseCommand}" 
+                                   CommandParameter="{Binding .}"/>
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+                <Button Text="Add New Mouse Action" Command="{Binding AddNewMouseActionCommand}"/>
+            </StackLayout>
+        </Frame>
+
+        <!-- Array View: Windows Commands -->
+        <Frame BorderColor="LightGray" Padding="10" Margin="10">
+            <StackLayout>
+                <Label Text="Windows Commands Array" FontSize="Subtitle"/>
+                <CollectionView ItemsSource="{Binding WindowsCommands}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Orientation="Horizontal" Spacing="10">
+                                <Entry Text="{Binding Command}" Placeholder="Command" WidthRequest="100"/>
+                                <Entry Text="{Binding ActionName}" Placeholder="Action Name" WidthRequest="200"/>
+                                <Button Text="Execute" 
+                                   Command="{Binding Source={RelativeSource 
+                                          AncestorType={x:Type local:ActionPage}}, 
+                                          Path=BindingContext.ExecuteCommand}" 
+                                   CommandParameter="{Binding .}"/>
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+                <Button Text="Add New Command" Command="{Binding AddNewCommandCommand}"/>
+            </StackLayout>
+        </Frame>
+
+    </StackLayout>
 </ContentPage>
