--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -1,19 +1,19 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       xmlns:local="clr-namespace:CSimple.Pages"
-       xmlns:m="clr-namespace:CSimple.Models"
-       xmlns:v="clr-namespace:CSimple.Views"
-       xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-       ios:Page.UseSafeArea="True"
-       Title="Action"
-       Shell.NavBarIsVisible="{OnIdiom True, Desktop=False}"
-       x:Class="CSimple.Pages.ActionPage">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:CSimple.Pages"
+             xmlns:m="clr-namespace:CSimple.Models"
+             xmlns:v="clr-namespace:CSimple.Views"
+             xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+             ios:Page.UseSafeArea="True"
+             Title="Action"
+             Shell.NavBarIsVisible="{OnIdiom True, Desktop=False}"
+             x:Class="CSimple.Pages.ActionPage">
 
     <StackLayout Padding="10" Spacing="20">
         <Label Text="Action"
-            FontSize="Title"
-            HorizontalOptions="Center"
-            VerticalOptions="StartAndExpand"/>
+               FontSize="Title"
+               HorizontalOptions="Center"
+               VerticalOptions="StartAndExpand"/>
 
         <!-- Input Section -->
         <StackLayout Orientation="Horizontal" Spacing="10" Margin="0,20,0,0">
@@ -28,7 +28,7 @@
                 <DataTemplate>
                     <Grid Padding="10" ColumnDefinitions="*, *, Auto">
                         <Label Grid.Column="0" Text="{Binding ActionName}" VerticalOptions="Center"/>
-                        <Label Grid.Column="1" Text="{Binding ActionArray}" VerticalOptions="Center"/>
+                        <Label Grid.Column="1" Text="{Binding ActionArrayFormatted}" VerticalOptions="Center"/>
                         <Button Grid.Column="2" Text="Simulate" Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.SimulateActionGroupCommand}" CommandParameter="{Binding .}" VerticalOptions="Center"/>
                     </Grid>
                 </DataTemplate>
