--- a/src/CSimple/App.xaml
+++ b/src/CSimple/App.xaml
@@ -39,7 +39,7 @@
             <FlyoutItem Title="Favorites" Style="{StaticResource FavFlyout}">
                 <ShellContent ContentTemplate="{DataTemplate page:FavoritesPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Map" Style="{StaticResource MapFlyout}">
+            <FlyoutItem Title="Map" Route="map" FlyoutItemIsVisible="False">
                 <ShellContent ContentTemplate="{DataTemplate page:MapPage}"/>
             </FlyoutItem>
             <FlyoutItem Title="Settings" Route="settings" FlyoutItemIsVisible="False">
@@ -48,26 +48,26 @@
             <FlyoutItem Title="About" Route="about" FlyoutItemIsVisible="False">
                 <ShellContent ContentTemplate="{DataTemplate page:AboutPage}"/>
             </FlyoutItem>
+            <FlyoutItem Title="Observe" Style="{StaticResource ObserveFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:ObservePage}"/>
+            </FlyoutItem>
+            <FlyoutItem Title="Orient" Style="{StaticResource OrientFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:OrientPage}"/>
+            </FlyoutItem>
+            <FlyoutItem Title="Goal" Style="{StaticResource GoalFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:GoalPage}"/>
+            </FlyoutItem>
+            <FlyoutItem Title="Plan" Style="{StaticResource PlanFlyout}">
+                <ShellContent ContentTemplate="{DataTemplate page:PlanPage}"/>
+            </FlyoutItem>
             <FlyoutItem Title="Action" Style="{StaticResource ActionFlyout}">
                 <ShellContent ContentTemplate="{DataTemplate page:ActionPage}"/>
             </FlyoutItem>
             <FlyoutItem Title="Contact" Style="{StaticResource ContactFlyout}">
                 <ShellContent ContentTemplate="{DataTemplate page:ContactPage}"/>
             </FlyoutItem>
-            <FlyoutItem Title="Goal" Style="{StaticResource GoalFlyout}">
-                <ShellContent ContentTemplate="{DataTemplate page:GoalPage}"/>
-            </FlyoutItem>
             <FlyoutItem Title="Login" Route="login" FlyoutItemIsVisible="False">
                 <ShellContent ContentTemplate="{DataTemplate page:LoginPage}"/>
-            </FlyoutItem>
-            <FlyoutItem Title="Observe" Route="observe" FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:ObservePage}"/>
-            </FlyoutItem>
-            <FlyoutItem Title="Orient" Route="orient" FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:OrientPage}"/>
-            </FlyoutItem>
-            <FlyoutItem Title="Plan" Route="plan" FlyoutItemIsVisible="False">
-                <ShellContent ContentTemplate="{DataTemplate page:PlanPage}"/>
             </FlyoutItem>
             <FlyoutItem Title="Privacy" Route="privacy" FlyoutItemIsVisible="False">
                 <ShellContent ContentTemplate="{DataTemplate page:PrivacyPage}"/>
@@ -93,17 +93,9 @@
                 <Tab Title="About" Icon="tab_settings.png">
                     <ShellContent ContentTemplate="{DataTemplate page:AboutPage}"/>
                 </Tab>
-                <Tab Title="Action" Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:ActionPage}"/>
-                </Tab>
+
                 <Tab Title="Contact" Icon="tab_settings.png">
                     <ShellContent ContentTemplate="{DataTemplate page:ContactPage}"/>
-                </Tab>
-                <Tab Title="Goal" Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:GoalPage}"/>
-                </Tab>
-                <Tab Title="Login" Icon="tab_settings.png">
-                    <ShellContent ContentTemplate="{DataTemplate page:LoginPage}"/>
                 </Tab>
                 <Tab Title="Observe" Icon="tab_settings.png">
                     <ShellContent ContentTemplate="{DataTemplate page:ObservePage}"/>
@@ -111,8 +103,17 @@
                 <Tab Title="Orient" Icon="tab_settings.png">
                     <ShellContent ContentTemplate="{DataTemplate page:OrientPage}"/>
                 </Tab>
+                <Tab Title="Goal" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:GoalPage}"/>
+                </Tab>
                 <Tab Title="Plan" Icon="tab_settings.png">
                     <ShellContent ContentTemplate="{DataTemplate page:PlanPage}"/>
+                </Tab>
+                <Tab Title="Action" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:ActionPage}"/>
+                </Tab>
+                <Tab Title="Login" Icon="tab_settings.png">
+                    <ShellContent ContentTemplate="{DataTemplate page:LoginPage}"/>
                 </Tab>
                 <Tab Title="Privacy" Icon="tab_settings.png">
                     <ShellContent ContentTemplate="{DataTemplate page:PrivacyPage}"/>
