set deafult load size and button feedback

--- a/src/CSimple/Resources/Styles/DefaultTheme.xaml
+++ b/src/CSimple/Resources/Styles/DefaultTheme.xaml
@@ -6,10 +6,14 @@
                     xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
                     xmlns:converter="clr-namespace:CSimple.Converters">
 
-    <Color x:Key="Primary">#512BD4</Color>
+    <Color x:Key="Primary">#0078D4</Color>
+    <Color x:Key="PrimaryDark">#005A9E</Color>
+    <Color x:Key="PrimaryLight">#B3D7FF</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
-    <Color x:Key="Neutral">#969696</Color>
+    <Color x:Key="Neutral">#808080</Color>
+    <Color x:Key="NeutralDark">#505050</Color>
+    <Color x:Key="NeutralLight">#D3D3D3</Color>
     <Color x:Key="NeutralLighter">#E5E5E1</Color>
     <Color x:Key="NeutralDarker">#505050</Color>
     <Color x:Key="White">#FFFFFF</Color>
@@ -231,6 +235,12 @@
                             <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
                         </VisualState.Setters>
                     </VisualState>
+                    <VisualState x:Name="Pressed">
+                        <VisualState.Setters>
+                            <Setter Property="BackgroundColor" Value="{StaticResource PrimaryDark}" />
+                            <Setter Property="Scale" Value="0.95" /> <!-- Slightly reduce size when pressed -->
+                        </VisualState.Setters>
+                    </VisualState>
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
                             <Setter Property="BackgroundColor" Value="{StaticResource Neutral}" />
@@ -251,6 +261,13 @@
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal"/>
+                    <VisualState x:Name="Pressed">
+                        <VisualState.Setters>
+                            <Setter Property="BackgroundColor" Value="{StaticResource PrimaryLight}" />
+                            <Setter Property="Scale" Value="0.95" />
+                        </VisualState.Setters>
+                    </VisualState>
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
                             <Setter Property="BorderColor" Value="{StaticResource Neutral}" />
@@ -267,6 +284,12 @@
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal"/>
+                    <VisualState x:Name="Pressed">
+                        <VisualState.Setters>
+                            <Setter Property="Scale" Value="0.95" />
+                        </VisualState.Setters>
+                    </VisualState>
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
                             <Setter Property="ImageSource" Value="{StaticResource CircleIconAltDisabled}" />
@@ -280,14 +303,23 @@
     <Style TargetType="Button" x:Key="SecondaryButtonOutline" BasedOn="{StaticResource PrimaryButtonOutline}">
         <Setter Property="Padding" Value="4"/>
     </Style>
+
     <Style TargetType="Button" x:Key="TertiaryButtonOutline" BasedOn="{StaticResource PrimaryButtonOutline}">
     </Style>
+
     <Style TargetType="Button" x:Key="BorderlessButton">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="TextColor" Value="{StaticResource Primary}"/>
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal"/>
+                    <VisualState x:Name="Pressed">
+                        <VisualState.Setters>
+                            <Setter Property="TextColor" Value="{StaticResource PrimaryDark}" />
+                            <Setter Property="Opacity" Value="0.7" /> <!-- Reduce opacity when pressed -->
+                        </VisualState.Setters>
+                    </VisualState>
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
                             <Setter Property="TextColor" Value="{StaticResource Neutral}" />
@@ -299,12 +331,21 @@
     </Style>
 
     <Style TargetType="ImageButton">
-        <Setter Property="BackgroundColor"
-                Value="Transparent"/>
-        <Setter Property="BorderColor"
-                Value="Transparent"/>
-        <Setter Property="android:ImageButton.ShadowColor"
-                Value="Transparent"/>
+        <Setter Property="BackgroundColor" Value="Transparent"/>
+        <Setter Property="BorderColor" Value="Transparent"/>
+        <Setter Property="android:ImageButton.ShadowColor" Value="Transparent"/>
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal"/>
+                    <VisualState x:Name="Pressed">
+                        <VisualState.Setters>
+                            <Setter Property="Scale" Value="0.95" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
     </Style>
 
     <Style TargetType="StackLayout" Class="CheckBoxContainer">
